<resources>
    <string name="app_name">TelecomLocate</string>

    <!--mapbox-->
    <string name="mapbox_public_access_token">
        pk.eyJ1IjoibWlycm9yZHVzdCIsImEiOiJjaXNjeXc2Y3owMDBmMnpwZjd2YnZvaWZhIn0.luGgUhgNCUpyNL4cACktHA
    </string>


    <!--main activity drawer strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_image_description">Base Station</string>
    <string name="drawer_description_head">TelecomLocate</string>
    <string name="drawer_description_snippet">Sensor Reading Collector</string>
    <string name="nav_test">Test availability</string>
    <string name="nav_data">Data Management</string>
    <string name="nav_prediction">Prediction</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>


    <!--activity label-->
    <string name="activity_label_collection">Collect Data</string>
    <string name="activity_label_detail">Detail</string>
    <string name="activity_label_data">Manage Data</string>
    <string name="activity_label_prediction">Prediction</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_about">About</string>


    <!--collection activity-->
    <string name="new_sample_placeholder">Start A New Sampling</string>
    <string name="new_sample_number">No.</string>
    <string name="new_sample_time">sample time</string>
    <string name="new_sample_location">sample location</string>
    <string name="title_action_save">Save Data</string>
    <string name="title_action_discard">Discard Data</string>

    <!--prediction activity-->
    <string name="preTitle">Start A Prediction Algorithm</string>
    <string name="preAlgorithm1">Random Forest</string>
    <string name="preAlgorithm2">prediction Algorithm2</string>
    <string name="preAlgorithm3">prediction Algorithm3</string>

    <!--detail activity-->
    <string name="detail_tab_title_1">Value</string>
    <string name="detail_tab_title_2">Map</string>
    <string name="detail_tab_title_3">Prediction</string>
    <string name="detail_value">value</string>
    <string name="detail_title">title</string>
    <string name="new_sample_bs_number">base station number</string>


    <!--data activity-->
    <string name="options_dots">⋮</string>
    <string name="data_set_desc">[Size] Time period</string>
    <string name="data_set_name">Data Set Name</string>
    <string name="iv_uploaded_description">is data uploaded</string>
    <string name="iv_exported_description">is data exported</string>
    <string name="title_action_upload">Upload</string>
    <string name="title_action_export">Export</string>
    <string name="title_action_delete_data_set">Delete</string>


    <!--setting activity-->
    <string name="pref_header_sample">Sample setting</string>
    <string name="pref_header_data">Data setting</string>
    <string name="pref_header_prediction">Prediction setting</string>
    <!--sample setting-->
    <string name="pref_default_sampling_interval">10</string>
    <string name="pref_title_sampling_interval">Sampling interval (in seconds)</string>
    <!--data setting-->
    <string name="pref_default_upload_url">http://yourip:8080/uploads</string>
    <string name="pref_title_upload_url">Upload url</string>
    <string name="pref_default_save_interval">300</string>
    <string name="pref_default_export_interval">600</string>
    <string name="pref_default_upload_interval">1800</string>
    <string name="pref_title_save_interval">Save interval (in seconds)</string>
    <string name="pref_title_export_interval">Export interval (in seconds)</string>
    <string name="pref_title_upload_interval">Upload interval (in seconds)</string>


    <!--about activity-->
    <string name="about_github">Source code on GitHub</string>
    <string name="about_version">Version 1.1</string>
    <string name="about_version_prefix">Version:</string>
    <string name="about_check_new_version">Check new version</string>
    <string name="about_description">blablabla............</string>

    <!--motion modes-->
    <string name="mode_walk">Walk</string>
    <string name="mode_run">Run</string>
    <string name="mode_bike">Bike</string>
    <string name="mode_car">Car</string>
    <string name="mode_other">Other</string>
    <string name="mode_hint">Select or type to Start</string>

    <string-array name="travel_mode">
        <item>Walk</item>
        <item>Run</item>
        <item>Bicycle</item>
        <item>Car</item>
        <item>Taxi</item>
        <item>Bus</item>
        <item>Subway</item>
        <item>Train</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
