<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_test"
            android:title="@string/nav_test" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/nav_data" />
        <item
            android:id="@+id/nav_prediction"
            android:icon="@drawable/ic_menu_prediction"
            android:title="@string/nav_prediction" />
    </group>

    <group android:id="@+id/nav_group_setting">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about" />
    </group>

</menu>
