<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.mirrordust.telecomlocate.activity.SettingsActivity$SamplePreferenceFragment"
        android:icon="@drawable/ic_pref_collection"
        android:title="@string/pref_header_sample" />

    <header
        android:fragment="com.mirrordust.telecomlocate.activity.SettingsActivity$DataPreferenceFragment"
        android:icon="@drawable/ic_pref_data"
        android:title="@string/pref_header_data" />

    <header
        android:fragment="com.mirrordust.telecomlocate.activity.SettingsActivity$PredictionPreferenceFragment"
        android:icon="@drawable/ic_pref_prediction"
        android:title="@string/pref_header_prediction" />

</preference-headers>
