<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_sample_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:text="@string/new_sample_number"
            android:textSize="@dimen/collection_background_text_size"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_bs_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_No"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/new_sample_bs_number"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_bs_num"
            android:layout_marginTop="4dp"
            android:text="@string/new_sample_time" />

        <TextView
            android:id="@+id/tv_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_bs_num"
            android:layout_below="@id/tv_time"
            android:layout_marginTop="4dp"
            android:text="@string/new_sample_location" />

    </RelativeLayout>
</android.support.v7.widget.CardView>