<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_data_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/data_set_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="0dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintRight_toLeftOf="@+id/dividing_line"
            android:layout_marginEnd="0dp">

            <TextView
                android:id="@+id/tv_data_set_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_set_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <ImageView
                android:id="@+id/iv_exported"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_data_set_name"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_export_file_orange_900_18dp"
                android:contentDescription="@string/iv_exported_description" />

            <ImageView
                android:id="@+id/iv_uploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_exported"
                android:layout_below="@id/tv_data_set_name"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_file_upload_orange_900_18dp"
                android:contentDescription="@string/iv_uploaded_description" />

            <TextView
                android:id="@+id/tv_data_set_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_uploaded"
                android:layout_below="@id/tv_data_set_name"
                android:text="@string/data_set_desc" />

        </RelativeLayout>

        <!--unused view-->
        <View
            android:id="@+id/dividing_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="@color/grey500"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/tv_options"
            android:layout_marginEnd="0dp" />

        <TextView
            android:id="@+id/tv_options"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@drawable/options_selector"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/options_dots"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/data_set_info" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>