<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginLeft="@dimen/main_card_margin_horizontal"
    android:layout_marginRight="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/about_image_view_size"
                android:layout_height="@dimen/about_image_view_size"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_version"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_check_new_version"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_check_new_version"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_version"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/about_image_view_size"
                android:layout_height="@dimen/about_image_view_size"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/about_github"
                android:textStyle="italic" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>